# drone-mpc-planner

./: .gitignore  LICENCE  README.md  agents.py  autoreboot.py  autostart.sh  conf.py  controllers.py  daemon.sh  data.py  environment.py  fixvideo.py  id_rsa  id_rsa.pub  installstuff.txt  main.py  models.py  reset_thrust.sh  startMUG.sh  test_control.py  test_traj.py  trajectory.py  tunnel.sh  tunnel2.sh  utils.py
SLAMdunk/: CMakeLists.txt  drawlog.m
base/: .gitignore  CMakeLists.txt  compile_commands.json
base/ansible/: README.md  ansible.cfg  inventory  inventory.ini  inventory.py  inventory.yaml
base/ansible/playbooks/: check.yaml  checks.sh  pull_release.sh  reboot.yaml  release_upgrade_pats_1.sh  release_upgrade_pats_2.sh  release_upgrade_pats_3.sh  release_upgrade_su.sh  release_upgrade_su_2.sh  release_upgrade_su_3.sh  retrofix.sh  shutdown.yaml  ssh_fix.sh  upgrade-baseboard.yaml  upgrade-bb-executor.yml  upgrade-darkroom.yaml  upgrade-hunt.yaml  upgrade-linux.yml  upgrade-monitoring.yaml  upgrade-release.yml  upgrade-retrofix.yaml  upgrade-ssh.yaml  upgrade-wireguard.yaml
base/benchmark/: benchmark.csv  benchmark_short.csv  parse_benchmark.py
base/data_processing/: aggregate_jsons.py  auto_baseboard_daemon_starter.py  autostarter.py  baseboard.py  baseboardlink.py  baseboardtool.py  clean_hd.py  cut_moths.py  daemon.py  get_baseboard_version.sh  lib_base.py  lib_serialization.py  lib_socket.py  logs_to_json.py  process_session.py  pylintrc  render_videos.py  status_cc.py  status_sender.py  update_baseboard.sh
base/data_processing/ai/: conv1d.py
base/install/: .bash_history  .bashrc  .gdbinit  20auto-upgrades  45-pats_mm.rules  50unattended-upgrades  99-charging-pads.rules  autostart.sh  connect_wifi.sh  daemon.sh  disconnect_wifi.sh  environment_18.04  environment_20.04  gdbinit  grub_20  gst_1.18.4_fix.patch  install.sh  interfaces  interfaces_trapeye  networkmanager.yaml  packages_toberemoved.txt  rc.local  run_timezone_loader.py  screens.sh  set_hostname.py  set_timezone.py  sshconfig  sshd_config  sudoers  system.conf  termlog_rotate_config  tunnel.sh  uninstall_unused_packages.sh
base/install/huawei-hilink-status/: hstatus.py
base/install/trapeye/: dhcpd.conf  hostapd  hostapd.conf  interfaces  rfkill-unblock.service
base/ocp_design/: .gitignore  Makefile  clean_formulation.py  dronemodel.py  helper.py  insectmodel.py  main.py  ocp-result.kst  optimizer_configurations.py  planes.py  saveresults.py
base/ocp_design/attack_angle/: ocp_attack_angle.py
base/ocp_design/casadi_parser/: build_solver.py  build_solver_dense.py  build_solver_osqp.py  build_solver_qpoases.py  build_solver_sparse.py  casadi_parser.py  (+12 more)
base/replay_insects/: 001.csv  003.csv  004.csv  005.csv  006.csv  007.csv  008.csv  009.csv  12.csv  15.csv  18.csv  20.csv  26.csv  28.csv  3.csv  32.csv  33.csv  36.csv  37.csv  38.csv  39.csv  4.csv  42.csv  44.csv  49.csv  55.csv  56-90fps.csv  56.csv  61.csv  62-90fps.csv  62.csv  65-90fps.csv  66-90fps.csv  9.csv  replay_opogona_002.csv
base/scripts/: aggregate_jsons.py  auto_baseboardlink_starter.py  auto_executor_starter.sh  auto_trapeye_starter.sh  baseboardlink.py  clean_for_image.sh  clean_hd.py  configure_trapeye.sh  daemon.py  endless_wait.sh  hostname.py  init.sh  lib_base.py  lib_serialization.py  lib_socket.py  process_session.py  render_videos.py  retro_fix_size.py  run_timezone_loader.py  screens.sh  status_cc.py  timezone.py  trapeye.py  trapeye_wifi_boot_setup.sh  tunnel.sh  update.py  update_from_daemon.py  upgrade_pats_xml_1.21.py  wireguard_restarter.sh
base/src/: accelerometertrim.cpp  accelerometertrim.h  baseboard.cpp  baseboard.h  baseboardlink.cpp  baseboardlink.h  cameraview.cpp  cameraview.h  commandcenterlink.cpp  commandcenterlink.h  common.cpp  common.h  daemonlink.cpp  daemonlink.h  drone.cpp  drone.h  dronecontroller.cpp  dronecontroller.h  keepinviewcontroller.cpp  keepinviewcontroller.h  landingcontroller.cpp  landingcontroller.h  linalg.cpp  linalg.h  main.cpp  pats.cpp  pats.h  propwashhandler.cpp  propwashhandler.h  quadraticoptimizer.h  quaternion.cpp  quaternion.h  sqpmethod.cpp  sqpmethod.h  versions.h  visiondata.cpp  visiondata.h  vizs.cpp  vizs.h
base/unittest/: .gitignore  CMakeLists.txt  cameraviewtest.cpp  casadiparsertest.cpp  commontest.cpp  filtertest.cpp  flightareatest.cpp  interceptinplanestest.cpp  linalgtest.cpp  main.cpp  minnlptest.cpp  ocptester.cpp  ocptester.h  planetest.cpp  quaterniontest.cpp  rapidroutetest.cpp  rapidroutetest.h  trajectoryoptimizationtest.cpp  trajectoryoptimizationtest.h  ttitest.cpp
base/updates/: 20230416.update  20230417.update  20230426.update  20230508.update  20230509.update  20230512.update  20230519.update  20230528.update
base/xml/: .gitignore  blinktracker.xml  cam_calib_airsim.xml  control_anvil_crazybee.xml  control_anvil_superbee.xml  control_hammer.xml  control_tinywhoop.xml  drone_anvil_crazybee.xml  drone_anvil_diamond.xml  drone_anvil_superbee.xml  drone_hammer.xml  drone_jornboard.xml  drone_none.xml  drone_quf4.xml  drone_quto.xml  drone_qutt.xml  drone_trashcan.xml  dronetracker.xml  generator_cam_calib.xml  insecttracker.xml  navigation.xml  pats.xml  pats_debug.xml  pats_deploy.xml  trackermanager.xml  vision.xml
pc/: .gitignore  CMakeLists.txt  blink.xml  cam_calib.xml  control_tc.xml  drawlog.m  drone.xml  drone_tc.xml  drone_tinywhoop_d16.xml  drone_tw.xml  insecttracker.xml  navigation.xml  pats.xml  trackermanager.xml  vision.xml
pc/factory/: FVT4.txt  FVT5.txt  Thermal_IMU_bias.fact.csv  Thermal_IMU_ortho.fact.csv  camera0.yml  camera1.yml  extrinsics.yml  imu2cam.cfg  intrinsics.yml  serial.txt
pc/insect_logs/: 1.csv  15-90fps.csv  15.csv  16.csv  20-90fps.csv  20.csv  22.csv  29.csv  31.csv  35.csv  40.csv  48.csv  49.csv  52.csv  53-90fps.csv  54-90fps.csv  54.csv  56-90fps.csv  56.csv  58-90fps.csv  58.csv  59.csv  60.csv  61-90fps.csv  63-90fps.csv  63.csv  64-90fps.csv  64.csv  65-90fps.csv
src/: cam.h  (+74 more)
unittest/: CMakeLists.txt  cameraviewtest.cpp  commontest.cpp  linalgtest.cpp  main.cpp  quaterniontest.cpp
(+670 files in other folders)
