cmake_minimum_required(VERSION 2.8)
project( Mug )

# directories
set (PROJECT_SRC_DIR ../src)

# add packages
set( ENV{PATH} /opt/x86/gst/bin/ )
find_package(PkgConfig REQUIRED)
#find_package( Boost REQUIRED)
find_package( OpenCV REQUIRED )
#MESSAGE( STATUS "OpenCV_DIR: " ${OpenCV_DIR} )
#MESSAGE( STATUS "OpenCV_LIBS: " ${OpenCV_LIBS} )
#MESSAGE( STATUS "OpenCV_LIB_DIR: " ${OpenCV_LIB_DIR} )
#MESSAGE( STATUS "OpenCV_INCLUDE_DIRS: " ${OpenCV_INCLUDE_DIRS} )
#MESSAGE( STATUS "OpenCV_COMPUTE_CAPABILITIES: " ${OpenCV_COMPUTE_CAPABILITIES} )
#MESSAGE( STATUS "OpenCV_SHARED: " ${OpenCV_SHARED} )
#MESSAGE( STATUS "OpenCV_CONFIG_PATH: " ${OpenCV_CONFIG_PATH} )
#MESSAGE( STATUS "OpenCV_INSTALL_PATH: " ${OpenCV_INSTALL_PATH} )

MESSAGE( STATUS "OPENCV_VERSION: " ${OpenCV_VERSION} )

pkg_search_module(KALAMOS_CONTEXT REQUIRED kalamos-context)

MESSAGE( STATUS "KALAMOS_CONTEXT_INCLUDE_DIRS: " ${KALAMOS_CONTEXT_INCLUDE_DIRS} )
MESSAGE( STATUS "KALAMOS_CONTEXT_LIBRARIES: " ${KALAMOS_CONTEXT_LIBRARIES} )


MESSAGE( STATUS "KALAMOS_CONTEXT_LIBRARY_DIRS : " ${KALAMOS_CONTEXT_LIBRARY_DIRS} )
MESSAGE( STATUS "KALAMOS_CONTEXT_LDFLAGS : " ${KALAMOS_CONTEXT_LDFLAGS} )
MESSAGE( STATUS "KALAMOS_CONTEXT_CFLAGS : " ${KALAMOS_CONTEXT_CFLAGS} )

set (CEREAL_SRC_DIR ../src/)
include_directories("${CEREAL_SRC_DIR}")

include_directories(${KALAMOS_CONTEXT_INCLUDE_DIRS})
link_directories(${KALAMOS_CONTEXT_LIBRARY_DIRS})

# sources
FILE(GLOB MY_SRC_FILES "../src/*.cpp" "../src/*.h" "../src/*.c" "../src/cereal*.hpp")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse3 -std=c++0x -pthread")

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")

#detect whether we build for ARM drone or pc
IF (NOT DEFINED _DRONE)
    SET(_DRONE TRUE)
ENDIF()
ADD_DEFINITIONS(-D_DRONE=${_DRONE})

IF(CMAKE_BUILD_TYPE STREQUAL Debug)
        set(DEBUG_FLAG 1)
        ADD_DEFINITIONS(-DDEBUG_FLAG=${DEBUG_FLAG})
        MESSAGE( STATUS "DEBUG MODE" )
ENDIF(CMAKE_BUILD_TYPE STREQUAL Debug)

# build program
add_executable( MUG ${MY_SRC_FILES})

target_link_libraries( MUG ${OpenCV_LIBS} ${KALAMOS_LIBRARIES} )


target_include_directories(MUG
  PRIVATE
  ${OpenCV_INCLUDE_DIRS}
  ${KALAMOS_CONTEXT_INCLUDE_DIRS})
target_link_libraries(MUG
  ${KALAMOS_CONTEXT_LIBRARIES}
  ${OpenCV_LIBS}
)
